--- a/pom.xml
+++ b/pom.xml
@@ -11,44 +11,17 @@
 	<parent>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<groupId>org.springframework.boot</groupId>
-		<version>2.3.2.RELEASE</version>
+		<version>2.4.2</version>
 	</parent>
 
 	<dependencies>
-<!--		<dependency>-->
-<!--			<groupId>com.alibaba.cloud</groupId>-->
-<!--			<artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>-->
-<!--			<version>2021.1</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>com.alibaba.cloud</groupId>-->
-<!--			<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>-->
-<!--			<version>2021.1</version>-->
-<!--		</dependency>-->
 		<!--网关核心依赖-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-gateway</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>io.projectreactor.netty</groupId>
-					<artifactId>reactor-netty</artifactId>
-				</exclusion>
-			</exclusions>
-			<version>2.2.9.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>io.projectreactor.netty</groupId>
-			<artifactId>reactor-netty</artifactId>
-			<version>0.9.14.RELEASE</version>
+			<version>3.0.0</version>
 		</dependency>
 
-
-		<dependency>
-			<groupId>com.alibaba.cloud</groupId>
-			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-			<version>2.2.6.RELEASE</version>
-		</dependency>
 	</dependencies>
 
 	<build>
